--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Eventosapp"
         tools:targetApi="31">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBI-8gwjfAjH9d1ZmAWhfjaJwHerl26uSs"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".view.activity.MenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.CrearEventoActivity"/>
+        <activity android:name=".view.activity.DetalleEventoActivity"/>
+        <activity android:name=".view.activity.ListaEventoActivity"/>
     </application>
 
 </manifest>
