add editar al manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".view.activity.DetalleEventoActivity"/>
         <activity android:name=".view.activity.ListaEventoActivity"/>
         <activity android:name=".view.activity.BuscarEventoActivity"/>
+        <activity android:name=".view.activity.EditarEventoActivity"/>
     </application>
 
 </manifest>
