--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.activity.MenuActivity"/>
+        <activity android:name=".view.activity.CrearUsuarioActivity"/>
+        <activity android:name=".view.activity.CrearAlumnoActivity"/>
         <activity android:name=".view.activity.GestionEventosActivity"/>
         <activity android:name=".view.activity.CrearEventoActivity"/>
         <activity android:name=".view.activity.DetalleEventoActivity"/>
