--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBI-8gwjfAjH9d1ZmAWhfjaJwHerl26uSs"/>
         <activity
-            android:name=".view.activity.LoginActivity"
+            android:name=".view.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
